<resources>
    <string name="app_name">SampleTest</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_text">What test do you want to try today ?</string>
    <string name="searchbar_hint">Enter course code or certification Name</string>
    <string name="start_test">Start the Test</string>
    <string name="question_number">Question: 1/10</string>
    <string name="question_content">Question 1: This is an example question. Select the best answer.</string>
    <string name="answer_1">A. Example Answer 1</string>
    <string name="answer_2">B. Example Answer 2</string>
    <string name="answer_3">C. Example Answer 3</string>
    <string name="answer_4">D. Example Answer 4</string>
    <string name="prev_button">Prev</string>
    <string name="submit_button">Submit</string>
    <string name="next_button">Next</string>
    <string name="result_percentage">80%</string>
    <string name="summary_title">Test Result</string>
    <string name="restart">Try another test</string>
    <string name="summary_body">Congratulations, You got 8/10 correct</string>
    <string name="summary_passed">PASS</string>
    <string name="passing_grade">Passing Grade(0-100%)</string>
    <string name="passing_grade_default">50</string>
    <string name="number_of_question">Number of Questions(Min:0, Max:5)</string>
    <string name="noq_default">5</string>
    <string name="advance_setting">Advance Setting</string>
</resources>
