<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="15sp"
    android:layout_marginVertical="10sp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/questionNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question_number" />

    <ProgressBar
        android:id="@+id/question_progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:progress="10" />

    <TextView
        android:id="@+id/questionContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question_content"
        android:textSize="22sp" />

    <RadioGroup
        android:id="@+id/answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/choice_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_1" />

        <RadioButton
            android:id="@+id/choice_b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_2" />

        <RadioButton
            android:id="@+id/choice_c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_3" />

        <RadioButton
            android:id="@+id/choice_d"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_4" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/prevButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/prev_button" />

        <Button
            android:id="@+id/submitButton"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/submit_button" />

        <Button
            android:id="@+id/nextButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/next_button" />

    </LinearLayout>

</LinearLayout>