<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginVertical="30dp"
        >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25sp"
            android:layout_marginVertical="10sp"
            android:text="@string/welcome_text"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="22sp" />

        <AutoCompleteTextView
            android:id="@+id/select"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/searchbar_hint"
            android:layout_marginHorizontal="20sp"
            android:completionThreshold="1"
        />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="20sp"
            android:layout_marginVertical="10sp">

            <Button
                android:id="@+id/advance_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/advance_setting"
                android:drawableEnd="@drawable/ic_arrow_downward_black_24dp"
                android:layout_marginVertical="10sp"
                />

            <TextView
                android:id="@+id/passing_grade_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/passing_grade"
                android:visibility="gone"
                android:layout_marginVertical="10sp"/>

            <EditText
                android:id="@+id/passing_grade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:visibility="gone"
                android:text="@string/passing_grade_default"
                android:textAlignment="center"
                android:layout_marginVertical="10sp"/>

            <TextView
                android:id="@+id/noq_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/number_of_question"
                android:visibility="gone"
                android:layout_marginVertical="10sp"/>

            <EditText
                android:id="@+id/number_of_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:visibility="gone"
                android:text="@string/noq_default"
                android:textAlignment="center"
                android:layout_marginVertical="10sp"/>
        </LinearLayout>

        <Button
            android:id="@+id/startTest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20sp"
            android:layout_marginVertical="10sp"
            android:onClick="startQuestion"
            android:text="@string/start_test" />

    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>